@@ -38,7 +38,7 @@
 
 #ifndef lint
 #ifdef	DOSCCS
-static char sccsid[] = "@(#)cmd1.c	2.69 (gritter) 9/9/04";
+static char sccsid[] = "@(#)cmd1.c	2.72 (gritter) 9/9/04";
 #endif
 #endif /* not lint */
 
@@ -81,7 +81,7 @@ headers(v)
 	void *v;
 {
 	int *msgvec = v;
-	int k, n, mesg, flag = 0;
+	int g, k, n, mesg, flag = 0;
 	struct message *mp, *mq;
 	int size;
 
@@ -91,12 +91,25 @@ headers(v)
 		screen = ((mb.mb_threaded?message[n-1].m_threadpos:n)-1)/size;
 	if (screen < 0)
 		screen = 0;
+	k = screen * size;
+	if (k >= msgCount)
+		k = msgCount - size;
+	if (k < 0)
+		k = 0;
 	if (mb.mb_threaded == 0) {
-		mp = &message[screen * size];
-		if (mp >= &message[msgCount])
-			mp = &message[msgCount - size];
-		if (mp < &message[0])
-			mp = &message[0];
+		g = 0;
+		mq = &message[0];
+		for (mp = &message[0]; mp < &message[msgCount]; mp++)
+			if ((mp->m_flag&(MDELETED|MHIDDEN|MKILL))==0) {
+				if (g++ == k)
+					break;
+				if (g % size == 0)
+					mq = mp;
+			}
+		if (mp >= &message[msgCount]) {
+			mp = mq;
+			screen = g / size;
+		}
 		mesg = mp - &message[0];
 		if (dot != &message[n-1]) {
 			for (mq = mp; mq < &message[msgCount]; mq++)
@@ -116,18 +129,24 @@ headers(v)
 			printhead(mesg, stdout, 0);
 		}
 	} else {	/* threaded */
-		k = screen * size;
-		if (k >= msgCount)
-			k = msgCount - size;
-		if (k < 0)
-			k = 0;
-		mp = this_in_thread(threadroot, k+1);
-		if (mp == NULL)
-			mp = threadroot;
+		g = 0;
+		mq = threadroot;
+		for (mp = threadroot; mp; mp = next_in_thread(mp))
+			if ((mp->m_flag&(MDELETED|MHIDDEN|MKILL))==0 &&
+					mp->m_collapsed <= 0) {
+				if (g++ == k)
+					break;
+				if (g % size == 0)
+					mq = mp;
+			}
+		if (mp == NULL) {
+			mp = mq;
+			screen = g / size;
+		}
 		if (dot != &message[n-1]) {
 			for (mq = mp; mq; mq = next_in_thread(mq))
 				if ((mq->m_flag&(MDELETED|MHIDDEN|MKILL))==0 &&
-						mp->m_collapsed <= 0) {
+						mq->m_collapsed <= 0) {
 					setdot(mq);
 					break;
 				}
@@ -700,6 +719,7 @@ off_t *tstats;
 		mp = &message[*ip - 1];
 		touch(mp);
 		setdot(mp);
+		uncollapse1(mp, 1);
 		if (value("quiet") == NULL)
 			fprintf(obuf, catgets(catd, CATSET, 17,
 				"Message %2d:\n"), *ip);
